--- a/Intralot_Coding_Exercise/app/src/main/res/values/strings.xml
+++ b/Intralot_Coding_Exercise/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Intralot_Coding_Exercise</string>
+    <string name="enter_your_location">Enter Your Location</string>
 </resources>
